--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ keywords:
 author: kchris
 language: zh-CN
 timezone: ''
+email: 1098158356@qq.com
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
