--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -285,8 +285,8 @@ comments:
   text: false # Display the comment name next to the button
   # lazyload: The comment system will be load when comment element enters the browser's viewport.
   # If you set it to true, the comment count will be invalid
-  lazyload: true
-  count: false # Display comment count in post's top_img
+  lazyload: false
+  count: true # Display comment count in post's top_img
   card_post_count: false # Display comment count in Home Page
 
 # disqus
@@ -361,7 +361,7 @@ facebook_comments:
 twikoo:
   envId: http://207.148.100.215:8080/
   region:
-  visitor: false
+  visitor: true
   option:
 
 # Giscus
