--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ external_link:
   exclude: ''
 filename_case: 0
 render_drafts: false
-post_asset_folder: false
+post_asset_folder: true
 relative_link: false
 future: true
 highlight:
@@ -106,6 +106,40 @@ search:
   field: post
   content: true
 # template: ./search.xml
+
+#apalyer
+aplayer:
+  asset_inject: false
+  meting: true
+
+
+#douban
+douban:
+  id: 92678296
+  builtin: true
+  item_per_page: 10
+  meta_max_line: 4
+  #book:
+  #  path: books/index.html
+  # title: 'This is my book title'
+  #  quote: 'This is my book quote'
+  #  option:
+  movie:
+    path: movies/index.html
+    title: '看点不一样的~'
+    quote: '电影发明以后，人类的生命至少比以前延长了三倍'
+    option:
+  #game:
+  #  path: games/index.html
+  #  title: 'This is my game title'
+  #  quote: 'This is my game quote'
+  #  option:
+  #song:
+  #  path: songs/index.html
+  #  title: 'This is my song title'
+  #  quote: 'This is my song quote'
+  #  option:
+  timeout: 10000 
 
 # Extensions
 ## Plugins: https://hexo.io/plugins/
