Changes to be committed: 	modified:   .obsidian/workspace.json 	new file:   _config.butterfly.yml 	modified:   _config.yml 	modified:   "source/_posts/AI\347\273\230\347\224\273.md" 	renamed:    source/img/AI_Paint.png -> "source/img/AI\347\273\230\347\224\273/AI_Paint.png" 	new file:   "source/img/AI\347\273\230\347\224\273/\347\225\214\351\235\242UI\344\275\277\347\224\250\350\257\264\346\230\216.jpg"

--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,12 @@ external_link:
   exclude: ''
 filename_case: 0
 render_drafts: false
-post_asset_folder: true
+post_asset_folder: false
+#启用MD语法形式图片
+marked:
+  prependRoot: true
+  postAsset: true
+
 relative_link: false
 future: true
 highlight:
