--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -7,11 +7,11 @@ menu:
    时间线: /archives/ || fas fa-archive
    标签: /tags/ || fas fa-tags
    分类: /categories/ || fas fa-folder-open
-   List||fas fa-list||hide:
+   影音||fas fa-headphones||hide:
      Music: /music/ || fas fa-music
      Movie: /movies/ || fas fa-video
     # iamges: /movies/ || fas fa-images
-  # Link: /link/ || fas fa-link
+   工具: /link/ || fas fa-book
   # About: /about/ || fas fa-heart
 
 nav:
