--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -4,7 +4,7 @@
 
 menu:
    主页: / || fas fa-home
-   时间线: /archives/ || fas fa-archive
+   归档: /archives/ || fas fa-archive
    标签: /tags/ || fas fa-tags
    分类: /categories/ || fas fa-folder-open
    影音||fas fa-headphones||hide:
