--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: GameDesign
 subtitle: ''
-description: '接纳一切新鲜有趣的事物~'
+description: '接纳一切新鲜有趣的事物'
 keywords:
 author: kchris
 language: zh-CN
