feat:change rssinfo

--- a/_config.yml
+++ b/_config.yml
@@ -124,7 +124,7 @@ feed:
   path: link/atom.xml
   limit: 20
   hub:
-  content:
+  content: true
   content_limit: 140
   content_limit_delim: ' '
   order_by: -date
