feat:top beautify

--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -899,8 +899,15 @@ css_prefix: true
 # 插入代码到头部 </head> 之前 和 底部 </body> 之前
 inject:
   head:
+    - <link rel="stylesheet" href="/css/wave_style.css">
     # - <link rel="stylesheet" href="/xxx.css">
   bottom:
+    - <script src="/js/self.js"></script>
+
+    #水波纹效果 对应配置文件js/ripples 文件夹下的js配置
+    - <script defer src="/js/ripples/jquery.min.js"></script>
+    - <script defer data-pjax src="/js/ripples/jquery.ripples.js"></script>
+    - <script defer data-pjax src="/js/ripples/ripples.js"></script>
     # - <script src="xxxx"></script>
     #全局音乐播放器
     #- <div class="aplayer no-destroy" data-id="7199616451&userid=96116466" data-server="netease" data-type="playlist" data-fixed="true" data-mini="true" data-autoplay="true" data-lrctype="0"> </div>
