--- a/_config.yml
+++ b/_config.yml
@@ -188,6 +188,18 @@ charts:
 #  option:
 #  front_matter:
 
+# hexo-hide-posts 隐藏文章
+hide_posts:
+  enable: true
+  # 可以改成其他你喜欢的名字
+  filter: hidden
+  # 指定你想要传递隐藏文章的 generator，比如让所有隐藏文章在存档页面可见
+  # 常见的 generators 有：index, tag, category, archive, sitemap, feed, etc.
+  public_generators: []
+  # 为隐藏的文章添加 noindex meta 标签，阻止搜索引擎收录
+  noindex: true
+
+
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
