--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "hexo-abbrlink": "^2.2.1",
     "hexo-butterfly-artitalk": "^1.0.4",
     "hexo-butterfly-charts": "^1.1.3",
+    "hexo-butterfly-swiper": "^1.0.12",
     "hexo-deployer-git": "^4.0.0",
     "hexo-douban": "^2.1.7",
     "hexo-generator-archive": "^2.0.0",
