--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "hexo-abbrlink": "^2.2.1",
     "hexo-butterfly-artitalk": "^1.0.4",
     "hexo-butterfly-charts": "^1.1.3",
-    "hexo-butterfly-swiper": "^1.0.12",
     "hexo-deployer-git": "^4.0.0",
     "hexo-douban": "^2.1.7",
     "hexo-generator-archive": "^2.0.0",
@@ -31,6 +30,7 @@
     "hexo-renderer-pug": "^3.0.0",
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
+    "hexo-swiper-bar": "^1.1.1",
     "hexo-tag-aplayer": "^3.0.4",
     "hexo-theme-butterfly": "^4.7.0",
     "hexo-theme-landscape": "^0.0.3",
