--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -903,6 +903,8 @@ inject:
     - <link rel="stylesheet" href="/css/wave_style.css">
     #加载进度条
     - <link rel="stylesheet" href="/css/progress_bar.css">
+    #twikoo
+    - <link rel="stylesheet" href="/css/twikoo_tips.css">
     # - <link rel="stylesheet" href="/xxx.css">
   bottom:
     #水波纹效果 对应配置文件js/ripples 文件夹下的js配置
