--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hexo-butterfly-charts": "^1.1.3",
     "hexo-deployer-git": "^4.0.0",
     "hexo-douban": "^2.1.7",
+    "hexo-douban-card": "^1.4.0",
     "hexo-generator-archive": "^2.0.0",
     "hexo-generator-category": "^2.0.0",
     "hexo-generator-feed": "^3.0.0",
