change hexo archive

--- a/source/_data/link.yml
+++ b/source/_data/link.yml
@@ -68,3 +68,8 @@
       link: https://butterfly.js.org/posts/4aa8abbe/
       avatar: https://butterfly.js.org/img/avatar.png
       descr: Butterfly 配置文档
+    
+    - name: Butterfly 美化教程
+      link: https://butterfly.zhheo.com/
+      avatar: https://bu.dusays.com/2023/03/03/6401a795245ff.png
+      descr: 一些不错美化方案
