--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "hexo-tag-aplayer": "^3.0.4",
     "hexo-theme-butterfly": "^4.7.0",
     "hexo-theme-landscape": "^0.0.3",
-    "hexo-wordcount": "^6.0.1"
+    "hexo-wordcount": "^6.0.1",
+    "sweetalert2": "^11.7.3"
   }
 }
