--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ email: 1098158356@qq.com
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://kchris1027.github.io
+url: http://cn.kongcai.tech
 #permalink: :year/:month/:day/:title/
 #利用hexo-abbrink插件，生成文章唯一链接
 permalink: post/:abbrlink.html
