--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "hexo-renderer-pug": "^3.0.0",
     "hexo-renderer-stylus": "^2.1.0",
     "hexo-server": "^3.0.0",
+    "hexo-steam-games": "^1.3.2",
     "hexo-swiper-bar": "^1.1.1",
     "hexo-tag-aplayer": "^3.0.4",
+    "hexo-tag-steamgame": "^1.0.0",
     "hexo-theme-butterfly": "^4.7.0",
     "hexo-theme-landscape": "^0.0.3",
     "hexo-wordcount": "^6.0.1",
