--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -49,6 +49,7 @@ social:
   # fab fa-github: https://github.com/xxxxx || Github
   # fas fa-envelope: mailto:xxxxxx@gmail.com || Email
   # fas fa-envelope: mailto:1098158356@qq.com || Email
+   fab fa-steam: https://steamcommunity.com/profiles/76561198326647546/ || 好友代码：366381818
    fab fa-bilibili: https://space.bilibili.com/6518211 || b站
    fas fa-rss: http://kchris1027.github.io/link/atom.xml || RSS
   
@@ -656,7 +657,7 @@ subtitle:
   source: false
   # 如果關閉打字效果，subtitle 只會顯示 sub 的第一行文字
   sub:
-    - Games change the world
+    - 无所作为，则人生太长；欲有所为，则人生太短。
 
 # Loading Animation (加載動畫)
 preloader:
