--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ external_link:
   exclude: ''
 filename_case: 0
 render_drafts: false
-post_asset_folder: false
+post_asset_folder: true
 #启用MD语法形式图片
 marked:
   prependRoot: true
