--- a/_config.butterfly.yml
+++ b/_config.butterfly.yml
@@ -49,9 +49,10 @@ social:
   # fab fa-github: https://github.com/xxxxx || Github
   # fas fa-envelope: mailto:xxxxxx@gmail.com || Email
   # fas fa-envelope: mailto:1098158356@qq.com || Email
-   fab fa-steam: https://steamcommunity.com/profiles/76561198326647546/ || 好友代码：366381818
-   fab fa-bilibili: https://space.bilibili.com/6518211 || b站
-   fas fa-rss: http://kchris1027.github.io/link/atom.xml || RSS
+  fas fa-hashtag: https://pd.qq.com/s/e2ja3ehfs || QQ频道
+  fab fa-steam: https://steamcommunity.com/profiles/76561198326647546/ || 好友代码：366381818
+  fab fa-bilibili: https://space.bilibili.com/6518211 || b站
+  fas fa-rss: http://kchris1027.github.io/link/atom.xml || RSS
   
 
 # search (搜索)
